--- a/spec/Test-case/Test-case-Back/Лобби и комнаты/BE-19 Присоединение к несуществующей комнате.md
+++ b/spec/Test-case/Test-case-Back/Лобби и комнаты/BE-19 Присоединение к несуществующей комнате.md
@@ -6,4 +6,4 @@
 | **Указание на модуль тестирования** | Lobby → joinToRoom |
 | **Исходные данные** | Токен пользователя, несуществующий ID комнаты: 9999 |
 | **Шаги тест-кейса** | 1. Выполнить команду: `http://knightwars.local/api?method=joinToRoom&token=user_token&roomId=9999`<br>2. Проверить ответ |
-| **Ожидаемый результат** | Ответ содержит `result: 'error'`, `error: { code: 2003, text: 'Room not found' }` |
+| **Ожидаемый результат** | Ответ содержит `result: 'error'`, `error: { code: 2003, text: 'комната не найдена' }` |
