--- a/spec/Test-case/Test-case-Back/Лобби и комнаты/BE-21 Начало игры не владельцем комнаты.md
+++ b/spec/Test-case/Test-case-Back/Лобби и комнаты/BE-21 Начало игры не владельцем комнаты.md
@@ -6,4 +6,4 @@
 | **Указание на модуль тестирования** | Lobby → startGame |
 | **Исходные данные** | Токен участника комнаты (не владельца) |
 | **Шаги тест-кейса** | 1. Выполнить команду: `http://knightwars.local/api?method=startGame&token=participant_token`<br>2. Проверить ответ |
-| **Ожидаемый результат** | Ответ содержит `result: 'error'`, `error: { code: 2014, text: 'You cannot start a room: you are either not the owner or you are not in the room' }` |
+| **Ожидаемый результат** | Ответ содержит `result: 'error'`, `error: { code: 2010, text: 'вы не являетесь хостом комнаты' }` |
